--- a/css/index.less
+++ b/css/index.less
@@ -56,4 +56,11 @@ table {
 html, body {
     height: 100%;
 }
-nav {display: flex}
+nav {display: flex;
+    flex-direction: row;
+    justify-content: end;
+    padding: 5px;
+
+    a {padding:15px;
+        font-size: 1.5em;}
+}
