more nav updates

--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,18 @@ nav a {
   padding: 15px;
   font-size: 1.5em;
 }
+header {
+  display: flex;
+}
+.skills {
+  display: flex;
+}
+.work {
+  display: flex;
+}
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
