--- a/css/index.less
+++ b/css/index.less
@@ -64,7 +64,15 @@ nav {display: flex;
     a {padding:15px;
         font-size: 1.5em;}
 }
-header {display: flex;}
+header {display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    width: 60%;
+    background: lightgrey;
+    
+    img {margin: 1em;}
+}
 .skills {display: flex;}
 .work {display: flex;}
 footer {display: flex;
