--- a/css/index.less
+++ b/css/index.less
@@ -65,8 +65,10 @@ nav {display: flex;
     position: fixed;
     overflow: hidden;
     top: 5px;
+    background: #f2f2f2;
     z-index: 10;
-    border: 1px solid black;
+    border: 1px solid #a6a6a6;
+    border-radius: 50%;
     padding: 5px;
     width: 100%;
 
@@ -80,7 +82,8 @@ nav {display: flex;
 .main {
     border: 1px solid black;
     margin: 10em 5em 1em 5em;
-    position: relative;}
+    position: relative;
+    border-radius: 20%;}
 
 header {display: flex;
     flex-direction: row;
@@ -105,5 +108,4 @@ footer {display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 300px;
     border: 1px solid black;}
