--- a/css/index.css
+++ b/css/index.css
@@ -145,8 +145,10 @@ nav {
   position: fixed;
   overflow: hidden;
   top: 5px;
+  background: #f2f2f2;
   z-index: 10;
-  border: 1px solid black;
+  border: 1px solid #a6a6a6;
+  border-radius: 50%;
   padding: 5px;
   width: 100%;
 }
@@ -163,6 +165,7 @@ nav a {
   border: 1px solid black;
   margin: 10em 5em 1em 5em;
   position: relative;
+  border-radius: 20%;
 }
 header {
   display: flex;
@@ -190,6 +193,5 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 300px;
   border: 1px solid black;
 }
