--- a/css/index.css
+++ b/css/index.css
@@ -193,5 +193,5 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  line-height: 2.5;
 }
