--- a/css/index.less
+++ b/css/index.less
@@ -104,6 +104,19 @@ header {display: flex;
     height: 300px;
     border: 1px solid black;}
 
+.heading {display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+
+    h1 {font-size: 4em;
+        color: #004d4d;}
+
+    p {font-size: 1.25em;
+        padding: 1em;}
+}
+
 footer {display: flex;
     flex-direction: column;
     justify-content: center;
