--- a/css/index.less
+++ b/css/index.less
@@ -93,7 +93,7 @@ nav {display: flex;
 }
 
 @media only screen and (max-width: 730px) {
-    nav {border-radius: 0%;
+    nav {border-radius: 5%;
         height: 6em;}
 }
 
@@ -168,7 +168,7 @@ header {display: flex;
     }
 }
 
-/* Skills Section Styles */
+/* Section Styles */
 
 .section {display: flex;
     flex-direction: column;
@@ -177,6 +177,8 @@ header {display: flex;
     margin: 1em 0 2em 0;
 
     h1 {font-size: 2.5em;}
+
+    
 }
 
 .ul {display: flex;
@@ -184,31 +186,42 @@ header {display: flex;
     align-items: center;
     justify-content: space-evenly;}
 
+.git {display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;}
+
 .list {padding: 3em 8em 1em 8em;
-    li {line-height: 2;}
+    li {line-height: 2;
+    
+        b {font-weight: bold;
+            font-style: italic;}
+        }
+}
+
+.gitlist {padding: 3em 5em 1em 5em;
+    li {line-height: 2;
+    
+        b {font-weight: bold;
+            font-style: italic;}
+        img {width: 20em;}
+        }
 }
 
 @media only screen and (max-width: 975px) {
-
+    .gitlist {padding: 3em 2em 1em 2em;
+        li {
+            img {width: 15em;}
+        }
+    }
 }
 
 @media only screen and (max-width: 730px) {
     .list {padding: 3em 5em 1em 5em;}
 }
 
-/* Links Styles */
-
-.heading {display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-
-    h1 {font-size: 4em;
-        color: #004d4d;}
-
-    p {font-size: 1.25em;
-        padding: 1em;}
+@media only screen and (max-width: 400px) {
+    .list {padding: 3em 2em 1em 2em;}
 }
 
 /* Footer Styles */
