--- a/css/index.less
+++ b/css/index.less
@@ -57,7 +57,15 @@ table {
 html, body {
     height: 100%;
 }
+
+/* My main code starts here */
+
 .center {margin: auto;}
+
+//Variables
+
+@color : #e6ffff;
+@border: 4px groove #00cccc;
 
 /* Navigation Styles */
 
@@ -68,9 +76,9 @@ nav {display: flex;
     position: fixed;
     overflow: hidden;
     top: 5px;
-    background: #e6ffff;
+    background: @color;
     z-index: 10;
-    border: 4px groove #00cccc;
+    border: @border;
     border-radius: 50%;
     padding: 5px;
     width: 100%;
@@ -107,8 +115,8 @@ nav {display: flex;
     border: 1px solid black;
     margin: 10em 5em 1em 5em;
     position: relative;
-    background: #e6ffff;
-    border: 4px groove #00cccc;
+    background: @color;
+    border: @border;
     border-radius: 10%;}
 
 @media only screen and (max-width: 975px) {
@@ -130,7 +138,7 @@ header {display: flex;
     justify-content: center;
     align-items: center;
     margin: 2em;
-    border-bottom: 4px groove #00cccc;
+    border-bottom: @border;
     
     h1 {font-size: 4em;
         padding: 1em 0 0 0;}
@@ -177,7 +185,6 @@ header {display: flex;
     margin: 1em 0 2em 0;
 
     h1 {font-size: 2.5em;}
-
     
 }
 
@@ -205,6 +212,7 @@ header {display: flex;
         b {font-weight: bold;
             font-style: italic;}
         img {width: 20em;}
+        p {display: none;}
         }
 }
 
@@ -218,10 +226,25 @@ header {display: flex;
 
 @media only screen and (max-width: 730px) {
     .list {padding: 3em 5em 1em 5em;}
+
+    .git {flex-direction: column;}
+
+    .gitlist {padding: 3em 5em 1em 5em;
+        li {
+            img {width: 20em;}
+        }
+    }
 }
 
 @media only screen and (max-width: 400px) {
     .list {padding: 3em 2em 1em 2em;}
+
+    .gitlist {
+        li {
+            img {display: none;}
+            p {display: block;}
+        }
+    }
 }
 
 /* Footer Styles */
@@ -231,5 +254,5 @@ footer {display: flex;
     justify-content: center;
     align-items: center;
     line-height: 2.5;
-    border-top: 4px groove #00cccc;
+    border-top: @border;
 }
