--- a/css/index.css
+++ b/css/index.css
@@ -139,6 +139,17 @@ body {
 .center {
   margin: auto;
 }
+.flexrow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.flexcolumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 /* Navigation Styles */
 nav {
   display: flex;
@@ -189,7 +200,6 @@ nav a {
 }
 /* Main body Style */
 .main {
-  border: 1px solid black;
   margin: 10em 5em 1em 5em;
   position: relative;
   background: #e6ffff;
@@ -266,8 +276,8 @@ header p {
 .section {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   margin: 1em 0 2em 0;
 }
 .section h1 {
